
$Id: changes.txt,v 1.53 2006/02/26 05:32:00 vvd0 Exp $

----
MVDSV v0.19.11-CVS build 22?? (2006.03.??)
- for developers: move all common tools functions from common.{c|h} and qwdtools/tools.{c|h}
  to bothtools.c and bothdefs.h
[server]
- added "scroll" console output on Win32
- bugfix from 0.19.10-develop: incorrect demo numbering while game proceed if used extracts by
  substrings in command 'cmd dlist', example: 'cmd dlist aerowalk'
(Thanks to gLAd)
- give back from EXPEREMENTAL changes in 0.19.10-develop:
  'serverinfo key *version changed from "2.40" to "mvdsv QWE_VERSION" and *qwe_version was removed
  (EXPERIMENTAL)', because ktpro can't determine version of the server and said
  "<COMMAND NAME> command is only for qwe > 2.40" (commands: autotrack, tracklist and etc.)
(Thanks to Renzo)
[qwdtools]
- bugfix from 0.19.10-develop: crashed


----
MVDSV v0.19.10-develop build 2227 (2006.01.25)
- hardcore cleanup. Removed lot of client-onlt code (by Angel)
- work on SunOS SPARC and ix86 targets now
- added MSVC 7.1 solution/project file
[server]
- serverinfo key *version changed from "2.40" to "mvdsv QWE_VERSION" and *qwe_version was removed
  (EXPERIMENTAL) (QWE_VERSION = "0.19.10-develop") (by disconnect)
- bugfix: disabled download from gamedir. So only subdirs of gamedir are allowed.
- new variable: allow_download_other (0 by default) - allows/disallows downloading of stuff
- improved timer accuracy for win32. use -nohwtimer to use old-style timing
(by disconnect from ZQuake)
- bugfix to bliP's sv_speedcheck: round to nearest value instead of rounding down
  This bug cause to wrong frametime --> wrong /fpslist (ktpro/ktx commands) output.
- To run server you only need a map (.bsp file), qwprogs and mvdsv executable.
  You even dont need pak0.pak, etc (by disconnect from ZQuake)
- A thousand bugfixes i found at ZQuake (like merge pmtrace_t with trace_t, etc),
  but I dont think I have to write it here, since only developers 