@@ -1,8 +1,10 @@
 
-$Id: changes.txt,v 1.53 2006/02/26 05:32:00 vvd0 Exp $
+$Id: changes.txt,v 1.54 2006/02/27 18:53:38 disconn3ct Exp $
 
 ----
 MVDSV v0.19.11-CVS build 22?? (2006.03.??)
+- fixed insanly dangerous bug with master_rcon_password :E. Now it can be set only from
+  server configs. (by disconnect)
 - for developers: move all common tools functions from common.{c|h} and qwdtools/tools.{c|h}
   to bothtools.c and bothdefs.h
 [server]
